--- a/login.css
+++ b/login.css
@@ -1,3 +1,51 @@
 body {
   background-image: url("loginbg.png");
+  background-size: cover;
+}
+h1{
+  font-size: 350%;
+  text-align: center;
+  color: skyblue;
+}
+button{
+  background-color: skyblue;
+  font-size: 180%;
+  border-radius: 12%;
+  border: skyblue;
+}
+.teachlog{
+  position: absolute;
+  top: 30%;
+  right: 45%;
+}
+.login{
+  position: absolute;
+  top: 30%;
+  left: 65%;
+}
+.teachsign{
+  position: absolute;
+  top: 45%;
+  right: 45%;
+}
+.signup{
+  position: absolute;
+  top: 45%;
+  left: 60%;
+}
+.parlog{
+  position: absolute;
+  top: 60%;
+  right: 45%;
+}
+.about{
+  position: absolute;
+  top: 65%;
+  left: 60%;
+  padding: 3%;
+}
+.parsign{
+  position: absolute;
+  top: 75%;
+  right: 45%;
 }
