--- a/login/login.css
+++ b/login/login.css
@@ -7,11 +7,18 @@ h1{
   text-align: center;
   color: skyblue;
 }
+#buttons{
+  display: grid;
+  grid-template: '1fr 1fr 1fr 1fr 1fr 1fr/ 3fr 3fr';
+  justify-items: center;
+  grid-row-gap: 10%;
+}
 button{
   background-color: skyblue;
   font-size: 180%;
   border-radius: 12%;
   border: skyblue;
+  width: fit-content;
 }
 button:hover{
   background-color: lightskyblue;
@@ -21,40 +28,25 @@ button:active{
   font-size: 170%;
 }
 .teachlog{
-  position: absolute;
-  top: 30%;
-  right: 45%;
+  grid-area: 1 / 1 / 2 / 2;
 }
 .login{
-  position: absolute;
-  top: 30%;
-  left: 65%;
+  grid-area: 1 / 2 / 2 / 3;
 }
 .teachsign{
-  position: absolute;
-  top: 45%;
-  right: 45%;
+  grid-area: 2 / 1 / 3 / 2;
 }
 .signup{
-  position: absolute;
-  top: 45%;
-  left: 60%;
+  grid-area: 2 / 2 / 3 / 3;
 }
 .parlog{
-  position: absolute;
-  top: 60%;
-  right: 45%;
+  grid-area: 3 / 1 / 4 / 2;
 }
 .about{
-  position: absolute;
-  top: 65%;
-  left: 60%;
-  padding: 3%;
+  grid-area: 3 / 2 / 5 / 3;
 }
 .parsign{
-  position: absolute;
-  top: 75%;
-  right: 45%;
+  grid-area: 4 / 1 / 5 / 2;
 }
 
 
