--- a/login/login.css
+++ b/login/login.css
@@ -8,12 +8,16 @@ h1{
   color: skyblue;
 }
 #buttons{
+  position:absolute;
   display: grid;
   grid-template: '1fr 1fr 1fr 1fr 1fr 1fr/ 3fr 3fr';
   justify-items: center;
   grid-row-gap: 10%;
+  height:60%;
+  width:100%;
 }
 button{
+  padding: 20px;
   background-color: skyblue;
   font-size: 380%;
   border-radius: 12%;
