--- a/login/login.css
+++ b/login/login.css
@@ -29,7 +29,7 @@ button:hover{
   cursor:pointer ;
 }
 button:active{
-  font-size: 170%;
+  font-size: 350%;
 }
 .teachlog{
   grid-area: 1 / 1 / 2 / 2;
@@ -53,27 +53,28 @@ button:active{
 .parsign{
   grid-area: 4 / 1 / 5 / 2;
 }
-
-
+label:hover{
+  cursor: text;
+}
 #credentials{
   display: none;
+  position: absolute;
+  height: 60%;
+  width: 100%;
+  grid-template: '1fr 1fr 1fr/ 2fr';
+  justify-items: center;
+  grid-row-gap: 10%;
 }
 #email{
-  position: absolute;
-  top: 30%;
-  left: 20%;
+  grid-area: 1 / 1 / 2 / 2;
   color: skyblue;
-  font-size: 150%;
+  font-size: 350%;
 }
 #password{
-  position: absolute;
-  top: 40%;
-  left: 20%;
+  grid-area: 2 / 1 / 3 / 2;
   color: skyblue;
-  font-size: 150%;
+  font-size: 350%;
 }
 #submit{
-  position: absolute;
-  top: 60%;
-  left: 40%;
+  grid-area: 3 / 1 / 4 / 2;
 }
