--- a/login/login.css
+++ b/login/login.css
@@ -65,16 +65,24 @@ label:hover{
   justify-items: center;
   grid-row-gap: 10%;
 }
-#email{
+input{
+  font-size: 40px;
+}
+#name{
   grid-area: 1 / 1 / 2 / 2;
   color: skyblue;
   font-size: 350%;
 }
-#password{
+#email{
   grid-area: 2 / 1 / 3 / 2;
   color: skyblue;
   font-size: 350%;
 }
-#submit{
+#password{
   grid-area: 3 / 1 / 4 / 2;
+  color: skyblue;
+  font-size: 350%;
+}
+#submit{
+  grid-area: 4 / 1 / 5 / 2;
 }
