--- a/style.css
+++ b/style.css
@@ -1,16 +1,48 @@
-body{
-  background-color: cornflowerblue;
-  margin:0px;
+body {
+  background-image: url("bg.png");
+  background-size: cover;
+}
+h1{
+  font-size: 650%;
+  text-align: center;
+  color: skyblue;
+}
+#buttons{
+  position:absolute;
+  display: grid;
+  grid-template: '1fr 1fr 1fr/ 2fr 2fr';
+  justify-items: center;
+  grid-row-gap: 10%;
+  height:60%;
+  width:100%;
+}
+button{
+  padding: 2%;
+  background-color: skyblue;
+  font-size: 380%;
+  border-radius: 12%;
+  border: skyblue;
+}
+button:hover{
+  background-color: lightskyblue;
+  cursor:pointer ;
+}
+button:active{
+  font-size: 350%;
 }
 
-
-#topbar{
-  border:1px solid red;
-  position: fixed;
-  background-color: aquamarine;
-  width: 100%;
-
-  display: flex;
-  justify-content: center;
-  height:100px;
+#avatar{
+  grid-area: 1/1/2/2;
+}
+#base{
+  grid-area: 1/2/2/3;
+}
+#quiz{
+  grid-area: 2/1/3/2;
+}
+#contest{
+  grid-area: 2/2/3/3;
+}
+#tasks{
+  grid-area: 3/1/4/3;
 }
