--- a/QuizBowl.css
+++ b/QuizBowl.css
@@ -49,3 +49,24 @@ h1{
 #leave:hover{
   cursor:pointer ;
 }
+#game{
+  display: none;
+  position: absolute;
+  justify-items: center;
+  height: 60%;
+  width: 100%;
+  grid-template: '1fr 1fr/ 1fr 1fr';
+  grid-row-gap: 10%;
+}
+#i1{
+  grid-area: 1/1/2/2;
+}
+#i2{
+  grid-area: 1/2/2/3;
+}
+#i3{
+  grid-area: 2/1/3/2;
+}
+#i4{
+  grid-area: 2/2/3/3;
+}
