--- a/quizbowl/QuizBowl.css
+++ b/quizbowl/QuizBowl.css
@@ -7,6 +7,11 @@ h1{
   text-align: center;
   color: darkblue;
 }
+ol{
+  font-size: 650%;
+  text-align: center;
+  color: darkblue;
+}
 #lobby{
   position:absolute;
   display: grid;
