--- a/login/login.css
+++ b/login/login.css
@@ -10,7 +10,7 @@ h1{
 #buttons{
   position:absolute;
   display: grid;
-  grid-template: '1fr 1fr 1fr 1fr 1fr 1fr/ 3fr 3fr';
+  grid-template: '1fr 1fr 1fr 1fr/ 3fr 3fr';
   justify-items: center;
   grid-row-gap: 10%;
   height:60%;
@@ -31,27 +31,21 @@ button:hover{
 button:active{
   font-size: 350%;
 }
-.teachlog{
+.login{
   grid-area: 1 / 1 / 2 / 2;
 }
-.login{
+.signup{
   grid-area: 1 / 2 / 2 / 3;
 }
-.teachsign{
+.parlog{
   grid-area: 2 / 1 / 3 / 2;
 }
-.signup{
-  grid-area: 2 / 2 / 3 / 3;
-}
-.parlog{
-  grid-area: 3 / 1 / 4 / 2;
-}
 .about{
-  grid-area: 3 / 2 / 5 / 3;
+  grid-area: 2 / 2 / 4 / 3;
   max-height: 80%;
 }
 .parsign{
-  grid-area: 4 / 1 / 5 / 2;
+  grid-area: 3 / 1 / 4 / 2;
 }
 label:hover{
   cursor: text;
