--- a/style.css
+++ b/style.css
@@ -58,3 +58,24 @@ button:active{
 #questions{
   grid-area: 2/1/3/2;
 }
+#parent{
+  display: none;
+  grid-row-gap: 10%;
+}
+#logout{
+  position:absolute;
+  left:10px;
+  right:10px;
+  font-size: 250%;
+  width:25%;
+}
+#logout:active{
+  font-size: 200%;
+}
+#parentId{
+  font-size: 400%;
+  text-align: center;
+}
+#parentIdCode{
+  font-size: 400%;
+}
