--- a/Shop/shop.css
+++ b/Shop/shop.css
@@ -16,6 +16,7 @@ h1{
   grid-area: 1/ 2 / 2 / 3;
   font-size: 400%;
   color: yellow;
+  font-weight: 600;
   text-align: center;
 }
 #shop {
@@ -39,4 +40,12 @@ button:hover{
 }
 button:active{
   font-size: 65%;
+}
+#itemTemplate{
+  display:none;
+}
+.items{
+  background-color: green;
+  padding: 40px;
+  border-radius: 30px;
 }
