--- a/settings/settings.css
+++ b/settings/settings.css
@@ -1,1 +1,36 @@
-
+body {
+  background-image: url("bg.png");
+  background-size: cover;
+}
+h1{
+  font-size: 650%;
+  text-align: center;
+  color: skyblue;
+}
+settings {
+  display: grid;
+  position: absolute;
+  height: 60%;
+  width: 100%;
+  grid-template: '3fr/ 1fr 1fr 1fr';
+  justify-items: center;
+  grid-row-gap: 10%;
+}
+.sound {
+  grid-area: 1/1/2/2;
+  font-size: 250%;
+  text-align: center;
+  color: skyblue;
+}
+.music {
+  grid-area: 1/2/2/3;
+  font-size: 250%;
+  text-align: center;
+  color: skyblue;
+}
+.volume {
+  grid-area: 1/3/2/4;
+  font-size: 250%;
+  text-align: center;
+  color: skyblue;
+}
