--- a/tasks/tasks.css
+++ b/tasks/tasks.css
@@ -1,6 +1,8 @@
 body {
   background-image: url("bg.png");
   background-size: cover;
+  text-align: center;
+  margin: 0px;
 }
 #top{
   display: grid;
@@ -16,51 +18,58 @@ body {
   appearance: none;
   background-color: inherit;
 }
-#heading{
-  grid-area: 1/2/2/3;
+
+#list{
+  text-align: center;
 }
-#show{
-  grid-area: 1/3/2/4;
-  background-color: skyblue;
-  font-size: 320%;
-  border-radius: 12%;
-  border: skyblue;
-  width: fit-content;
-  height: fit-content;
+
+.task{
+  background-color: aquamarine;
+  margin: auto;
+  padding: 15px;
+  border-radius: 20px;
+
+  width:75%;
+  text-align: center;
+  font-size: 300%;
+  font-family: sans-serif;
+  margin-bottom: 45px;
 }
-h1{
+
+.task > p {
+  text-wrap:balance;
+}
+
+.task > button {
+  font-size: 100%;
+}
+
+hr {
+  border: 10px solid gray;
+}
+
+h1, h2, label {
   font-size: 550%;
   text-align: center;
   color: skyblue;
 }
-#tasks{
-  display: grid;
-  grid-template: 4fr/1fr 1fr 1fr 1fr;
-  position: absolute;
-  height: 60%;
-  width: 100%;
-  font-size: 150%;
-  justify-items: center;
+label{
+  font-size: 400%;
 }
-#day{
-  color: skyblue;
-  grid-area: 1/1/2/2;
-}
-#text1{
-  grid-area: 1/2/2/3;
-}
-#night{
-  color: skyblue;
-  grid-area: 1/3/2/4;
-}
-#text2{
-  grid-area: 1/4/2/5;
-}
-#description{
-  display: none;
-  text-align: center;
-  color: skyblue;
+input {
   font-size: 300%;
+}
+#addTask{
+  margin:auto;
+  width:30%;
+  font-size: 400%;
+  margin-top: 40px;
+}
+h2{
+  font-size: 500%;
+}
+#taskTemplate{
+  display: none;
 }
 button{
   background-color: skyblue;
