--- a/style.css
+++ b/style.css
@@ -1,28 +1,3 @@
-body {
-  background-image: url("bg.png");
-  background-size: cover;
-}
-h1{
-  font-size: 650%;
-  text-align: center;
-  color: skyblue;
-}
-#buttons{
-  position:absolute;
-  display: grid;
-  grid-template: '1fr 1fr 1fr/ 2fr 2fr';
-  justify-items: center;
-  grid-row-gap: 10%;
-  height:60%;
-  width:100%;
-}
-button{
-  padding: 2%;
-  background-color: skyblue;
-  font-size: 380%;
-  border-radius: 12%;
-  border: skyblue;
-}
 button:hover{
   background-color: lightskyblue;
   cursor:pointer ;
@@ -34,33 +9,35 @@ button:active{
 #avatar{
   grid-area: 1/1/2/2;
 }
-#base{
-  grid-area: 1/2/2/3;
-}
 #quiz{
   grid-area: 2/1/3/2;
-}
-#contest{
-  grid-area: 2/2/3/3;
 }
 #tasks{
   grid-area: 3/1/4/2;
 }
+#shop{
+  grid-area: 1/2/2/3;
+}
+#connect{
+  grid-area: 2/2/3/3;
+}
 #settings{
   grid-area: 3/2/4/3;
 }
-#draw{
-  grid-area: 4/1/5/3;
+#parent{
+  position: absolute;
+  height: 60%;
+  width: 100%;
+  display: none;
+  grid-template: '1fr 1fr/ 2fr';
+  justify-items: center;
+  grid-row-gap: 10%;
 }
 #list{
   grid-area: 1/1/2/2;
 }
 #questions{
   grid-area: 2/1/3/2;
-}
-#parent{
-  display: none;
-  grid-row-gap: 10%;
 }
 #logout{
   position:absolute;
