--- a/style.css
+++ b/style.css
@@ -1,3 +1,28 @@
+body {
+  background-image: url("bg.png");
+  background-size: cover;
+}
+h1{
+  font-size: 650%;
+  text-align: center;
+  color: skyblue;
+}
+#child{
+  position:absolute;
+  display: grid;
+  grid-template: '3fr 3fr/ 2fr 2fr 2fr';
+  justify-items: center;
+  grid-row-gap: 10%;
+  height:60%;
+  width:100%;
+}
+button{
+  padding: 2%;
+  background-color: skyblue;
+  font-size: 380%;
+  border-radius: 12%;
+  border: skyblue;
+}
 button:hover{
   background-color: lightskyblue;
   cursor:pointer ;
@@ -38,21 +63,4 @@ button:active{
 }
 #questions{
   grid-area: 2/1/3/2;
-}
-#logout{
-  position:absolute;
-  left:10px;
-  right:10px;
-  font-size: 250%;
-  width:25%;
-}
-#logout:active{
-  font-size: 200%;
-}
-#parentId{
-  font-size: 400%;
-  text-align: center;
-}
-#parentIdCode{
-  font-size: 400%;
 }
